@@ -5,6 +5,8 @@ Version 2.0.0 RC3
 -----------------
 -Added: support for WMA (Windows Media Audio).
         Many thanks to cooleyes and hrimfaxi for the sample
+-Fixed: standardized the fast forward/rewind speed for the different codecs (kurian2z5)
+-Added: "Sleep Timer" feature (kurian2z5)
 
 
 Version 2.0.0 RC2
